--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,9 @@
     #############
     d  = diff
     #############
+    l = log
+    lo = log --oneline --graph --decorate
+    #############
     o  = checkout
     #############
     pl = pull
