reset to head command

--- a/.gitconfig
+++ b/.gitconfig
@@ -21,4 +21,8 @@
     #############
     pl = pull
     ps = push
+    #############
+    res = reset --hard origin/master
+        # moves to the main head (throws away local commits)
+    #############
     st = status
