timer.py:    lost an audio file I was using to tell me when the timer was up so changed the filename in timer.py

--- a/.gitconfig
+++ b/.gitconfig
@@ -28,3 +28,5 @@
         # moves to the main head (throws away local commits)
     #############
     st = status
+[diff]
+	external = git-meld-diff
