.gitignore:  added more files in my user 'u's ~ directory

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,19 @@
 *.jpeg
 */
 *.txt
+*.mp4
+*.mp3
+*.pdf
+.bash_history
+.bash_logout
+.*.swp
+.bastetrc
+.ICEauthority
+.Xauthority
+.lesshst
+.python_history
+.xsession-errors
+.xsession-errors.old
+file_suffixes_arent_read_by_the_command_line.py
+.dmrc
+examples.desktop
