TODO: .vimrc better :set nopaste

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,39 @@ examples.desktop
 .sudo_as_admin_successful
 quicklisp.lisp
 quicklisp.lisp.asc
+.bash_profile
+.bashrc-anaconda3.bak
+.emacs
+.mysql_history
+.profile
+.rediscli_history
+.wget-hsts
+1st_VRMall.pem
+CGAL_Desbrun_voro-vari
+CGAL_demo_dir
+Fresh_hmr
+TODO:____make_in_openpose_build_dir.sh
+aws_access_key.csv
+aws_cmd.sh
+aws_cmds.sh
+bump_subtitles.py
+g++__cmds.sh
+gmp_ver.py
+pipinst.sh
+plan
+prioritize!___morning_alarm_.WAV
+qt_version_check.sh
+rm_cuda.sh
+tmp.py
+to_install.sh
+to_install.sh_2.sh
+utils.py
+voronoi_2d________scipy_spatial__Voronoi_example.py
+voronoi_3d________scipy_spatial__SphericalVoronoi_.py
+voronoi_3d________scipy_spatial__Voronoi_.py
+voronoi_3d________scipy_spatial__Voronoi_.py____dir.py
+voronoi_3d________scipy_spatial__Voronoi_small__.py
+voronoi_3d________scipy_spatial__Voronoi_small__rand.py
+working_hmr!
+working_send_obj!
 
