--- a/.gitignore
+++ b/.gitignore
@@ -67,4 +67,65 @@ voronoi_3d________scipy_spatial__Voronoi_small__.py
 voronoi_3d________scipy_spatial__Voronoi_small__rand.py
 working_hmr!
 working_send_obj!
-
+./MJB_essay.pdf
+./Neural_Body_Fitting
+./Dario_measurements
+./run_SMPLX.sh
+./many_useful_openpose_cmds.sh
+./papers
+./Fresh_hmr2
+./PhD_app_essay____Nov_19_2019____UC_Berkeley___.txt
+./VRDR_cust_obj_mesh_____local_bucket
+./V
+./gr8____founder_checklist_Buchheit.png
+./OverLeaf
+./Blender_success_right_camera_view.png
+./waiver_request.txt
+./apple_interview_study
+./GOOD_GCLOUD_INSTANCES_ARE_OPENPOSE-UBUNTU-1_____OPENPOSE-UBUNTU16-1_____AND__CUDA-VERSION-TEST-0-VM_____.txt
+./mTailor_MGN_1.mp4
+./working_hmr!
+./Overleaf
+./vid.mp4
+./does_MJB_know___Belheumer.txt
+./CIHP_pgn.zip
+./Dressing_3D_Humans_using_a_Conditional_Mesh-VAE-GAN______Ma_Tang_Pons-Moll_and_MJBlack.pdf
+./Apply to Y Combinator___Bendich_winter_2020_____Sept_22_2019____5.txt
+./warp
+./Good_gcloud_instances_are_openpose-ubuntu-1_____openpose-ubuntu16-1_____and__cuda-version-test-0-vm_____.txt
+./link
+./TODO_chest_circum.py
+./utils.py
+./PhD_app_essay____May_12_2019____MPII_Tubingen_MJB____.pdf
+./GPA_calculation__python_input.txt
+./TODO___BNN_early_plan
+./node_example_Muppala
+./researchstatement_jielu.doc
+./working_send_obj!
+./beta_data_imgs_male
+./working_hmr_training
+./measure.py
+./MuVS
+./biz_model_generation.pdf
+./customer_render.png
+./biz
+./sudoku.py
+./Fresh_hmr
+./Darmouth.rkt
+./crontab_link
+./Papers
+./openpose
+./to_anna_blech.txt
+./beta_data
+./obj_2_png
+./Blue_Ocean_Strategy.pdf
+./YC_vid_Winter_2020.webm
+./SMPLX
+./SMPLX_from_imgs_python_____.py
+./img_Nathan.jpg
+./waiver
+./datasets
+./answers_to_Muppala_NodeJS_course
+./faces
+./TODO
+./YC_application_video_nxb_____Winter_2019_parsed.txt
