bunch of old files that I hadn't committed

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.ogv
+*.webm
+*.pkl
 *.sh
 *.obj
 *.mtl
@@ -16,6 +19,7 @@
 .bash_history
 .bash_logout
 .*.swp
+*~
 .bastetrc
 .ICEauthority
 .Xauthority
@@ -26,7 +30,6 @@
 file_suffixes_arent_read_by_the_command_line.py
 .dmrc
 examples.desktop
-*~
 .gnuplot_history
 .sbclrc
 .slime-history.eld
@@ -130,13 +133,19 @@ answers_to_Muppala_NodeJS_course
 faces
 TODO
 YC_application_video_nxb_____Winter_2019_parsed.txt
-.vim_session
-.vim_session_edit_pyrender
-.vim_session_openpose
-.vim_session_reference_view
-.vim_session_run.sh
-.vim_session______SMPL-X_Aug_19_2019_
+.vim_session*
 .octave*
 n8_*.json
-*.ogv
-*.webm
+Di_instructions_April_2_2020
+OpenPose_json
+mini_TODO
+winehq.key
+test_data.pkl_contents
+prey_0.6.2-ubuntu2_all.deb
+limitless.log
+.x11vnc.log.elon-eats-my-shorts:5901
+.selected_editor
+.dashrc
+.boto
+.gtk-recordmydesktop
+.rvmrc
