.bashrc:  alias s2 => sudo docker start 5b1c347bf448       .         .gitconfig : git diff doesn't launch a nice GUI like it would on my local Ubuntu laptop; it does everything in the terminal instead.  Which is fitting as long as we're using the shit terminal instead of X11 forwarding/whatever other remote desktop could be used

--- a/.gitconfig
+++ b/.gitconfig
@@ -30,7 +30,7 @@
     st  = status
     url = config --get remote.origin.url
 
-[diff]
-	external = git-meld-diff
+#[diff]
+	#external = git-meld-diff
 [core]
   editor=vim
