alias for git fetch,   a cmd I've been using lots lately

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,8 @@
     #############
     d   = diff
     #############
+    f   = fetch
+    #############
     l   = log
     lo  = log --oneline --graph --decorate
     #############
