--- a/.gitconfig
+++ b/.gitconfig
@@ -29,7 +29,9 @@
     res = reset --hard origin/master
         # moves to the main head (throws away local commits)
     #############
+    s   = stash
     st  = status
+    #############
     url = config --get remote.origin.url
 
 [diff]
