.gitconfig: vim diff tool for windows instead of meld.  Meld was being slow to install

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,42 +1,121 @@
+#[user]
+	#name = neonb88
+	#email = nathanbendich@gmail.com
+	#signingkey = 2A5A248015F59A96
+#[alias]
+		#ad  = add
+		##############
+		#b   = branch
+		##############
+		#c   = commit
+		#cm  = commit -vm
+		#ca  = commit -vam
+		##############
+		#cl  = clone
+		##############
+		#d   = diff
+		##############
+		#f   = fetch
+		##############
+		#l   = log
+		#lo  = log --oneline --graph --decorate
+		##############
+		#mt  = mergetool
+		############## ^   mergetool is good for resolving merge conflicts; it pulls up a beyondCompare UI
+		#o   = checkout
+		##############
+		#pl  = pull
+		#ps  = push
+		##############
+		#res = reset --hard origin/master
+				## moves to the main head (throws away local commits)
+		##############
+		#s   = stash
+		#st  = status
+		##############
+		#u   = config --get remote.origin.url
+		#ur  = config --get remote.origin.url
+		#url = config --get remote.origin.url
+#
+##[diff]
+	##external = git-meld-diff
+#[core]
+	#editor=vim
+#[http]
+#proxy = http://ashproxy.kdc.capitalone.com:8099
+#[https]
+#proxy = http://ashproxy.kdc.capitalone.com:8099
+
+######################################
+######################################
+######################################
+######################################
+######################################
+#   ^ from Windows laptop
+######################################
+######################################
+######################################
+######################################
+######################################
+#  From Capital One macbook laptop:   
+######################################
+######################################
+######################################
+######################################
+######################################
+
 [user]
-	name = neonb88
+	name = Nathan Bendich
+	#name = neonb88
 	email = nathanbendich@gmail.com
+	signingkey = 2A5A248015F59A96
 [alias]
-    ad  = add
-    #############
-    b   = branch
-    #############
-    c   = commit
-    cm  = commit -vm
-    ca  = commit -vam
-    #############
-    cl  = clone
-    #############
-    d   = diff
-    #############
-    f   = fetch
-    #############
-    l   = log
-    lo  = log --oneline --graph --decorate
-    #############
-    mt  = mergetool
-    ############# ^   mergetool is good for resolving merge conflicts; it pulls up a beyondCompare UI
-    o   = checkout
-    #############
-    pl  = pull
-    ps  = push
-    #############
-    res = reset --hard origin/master
-        # moves to the main head (throws away local commits)
-    #############
-    s   = stash
-    st  = status
-    #############
-    u   = config --get remote.origin.url
-    ur  = config --get remote.origin.url
-    url = config --get remote.origin.url
+  ad  = add
+  #############
+  b   = branch
+  #############
+  c   = commit
+  cm  = commit -vm
+  ca  = commit -vam
+  #############
+  cl  = clone
+  #############
+  d   = diff
+  #############
+  f   = fetch
+  #############
+  l   = log
+  lo  = log --oneline --graph --decorate
+  logOneFileAllBranches = log --all --follow -p --  #filename at end
+  l1  = logOneFileAllBranches
+  lod = lo --pretty=format:'%C(auto)%h%d (%as) %cn <%ce> %s'     # show date (hence the **__"d"__** in "lod" )    and other useful info                            and author:    https://stackoverflow.com/questions/1441010/the-shortest-possible-output-from-git-log-containing-author-and-date
+  #############
+  mt  = mergetool
+  ############# ^   mergetool is good for resolving merge conflicts; it pulls up a beyondCompare UI
+  o   = checkout
+  #############
+  p   = pop
+  pl  = pull
+  ps  = push
+  psCO= push --set-upstream origin       #      new-branchname       decid-32425  # add remote when pushing from CapitalOne (CO)    
+  #############
+  r   = rebase
+  res = reset --hard origin/master
+      # moves to the main head (throws away local commits)
+  #############
+  s   = stash
+  st  = status
+  #############
+  u   = config --get remote.origin.url
+  ur  = config --get remote.origin.url
+  url = config --get remote.origin.url
 
 [diff]
-	external = git-meld-diff
+  #external = git-meld-diff
+  tool = vimdiff
+[diff]
+  #external = git-meld-diff
+  tool = vimdiff
 [core]
   editor=vim
+
